[package]
name = "acssd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
base64 = "0.21.2"
chrono = "0.4.26"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
opencv = "0.84.2"
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
